# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: python-app.yml
page_analyzer/: app.py  db.py  models.py  parser.py  repositories.py  routes.py  services.py  utils.py
page_analyzer/templates/: base.html  footer.html  header.html  index.html  url.html  urls.html
