[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
